--- a/hw24/src/view/form.css
+++ b/hw24/src/view/form.css
@@ -1,3 +1,6 @@
 form {
-  background-color: red;
+  display: flex;
+  justify-content: space-around;
+  border: 1px red solid;
+  border-radius: 20px;
 }
