--- a/hw24/src/view/list.css
+++ b/hw24/src/view/list.css
@@ -1,8 +1,20 @@
 html,
 body {
   background-color: rosybrown;
+  display: flex;
+  justify-content: center;
 }
 
 .done {
   background-color: green;
+}
+
+.style-list {
+  text-align: center;
+}
+
+.style-list div {
+  border: solid 1px yellowgreen;
+  border-bottom: none;
+  border-radius: 20px;
 }
