--- a/hw24/src/view/form.css
+++ b/hw24/src/view/form.css
@@ -1,6 +1,27 @@
 form {
   display: flex;
   justify-content: space-around;
-  border: 1px red solid;
-  border-radius: 20px;
+}
+
+.style-form {
+  border-radius: 8px;
+  margin-top: 5px;
+  background-color: #303f3d;
+  padding: 10px 0 10px 0;
+}
+
+form input {
+  background-color: #7a8b65;
+  border: none;
+  border-radius: 3px;
+  width: 200px;
+  outline: none;
+}
+
+form button {
+  background-color: #7a8b65;
+  border: none;
+  padding: 0 20px 0px 20px;
+  border-radius: 3px;
+  cursor: pointer;
 }
